@@ -4,6 +4,8 @@ version 1.0.3
   spaces in its name on win32
 - Reorganize management of win32 registry entries
 - Add tramo/seats for win32 version
+- In window displaying single cross-sectional series, add 
+  popup option to show the series sorted
 
 12/09/02 version 1.0.2
 - generalize support for X-12-ARIMA to gtk-1.2 version, and 
